# PyMeshLab

./: .gitignore  .gitmodules  .qmake.conf  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  PYML_VERSION  PyMeshLab.py  README.md  download_last_release.py  readthedocs.yml  requirements.txt  run_tests.py  setup.py
.devcontainer/: Dockerfile  Dockerfile_aarch64  Dockerfile_x86_64  devcontainer.json  docker-compose.yml
.devcontainer/build_wheel_3_10/: devcontainer.json
.devcontainer/build_wheel_3_10_aarch64/: devcontainer.json
.devcontainer/build_wheel_3_10_x86_64/: devcontainer.json
.devcontainer/build_wheel_3_11/: devcontainer.json
.devcontainer/build_wheel_3_11_aarch64/: devcontainer.json
.devcontainer/build_wheel_3_11_x86_64/: devcontainer.json
.devcontainer/build_wheel_3_12/: devcontainer.json
.devcontainer/build_wheel_3_12_aarch64/: devcontainer.json
.devcontainer/build_wheel_3_12_x86_64/: devcontainer.json
.devcontainer/build_wheel_3_13_aarch64/: devcontainer.json
.devcontainer/build_wheel_3_13_x86_64/: devcontainer.json
.devcontainer/build_wheel_3_8/: devcontainer.json
.devcontainer/build_wheel_3_8_aarch64/: devcontainer.json
.devcontainer/build_wheel_3_8_x86_64/: devcontainer.json
.devcontainer/build_wheel_3_9/: devcontainer.json
.devcontainer/build_wheel_3_9_aarch64/: devcontainer.json
.devcontainer/build_wheel_3_9_x86_64/: devcontainer.json
.devcontainer/develop/: devcontainer.json
.devcontainer/develop_aarch64/: devcontainer.json
.devcontainer/develop_x86_64/: devcontainer.json
.github/: pull_request_template.md  stale.yml
.github/workflows/: AutoMergeMainOnDevel.yml  BuildAndTest.yml  BuildAndTestLinux.yml  BuildAndTestMacOS.yml  BuildAndTestUbuntu-Debug.yml  BuildAndTestUbuntu.yml  BuildAndTestUnix.yml  BuildAndTestWheels.yml  BuildAndTestWindows.yml  BuildDocumentation.yml  BuildUbuntu.yml  CreateAndTestRelease.yml  CreatePreRelease.yml  CreateRelease.yml  Debug.yml  Linux.yml  LinuxDebug.yml  MacOS.yml  TestRelease.yml  TestsUbuntu.yml  UploadLastRelease.yml  Windows.yml
PyMeshLab/: .gitignore  PyMeshLab.py  __init__.py  pymeshlab.cp-38-win_amd64.exp  pymeshlab.cp-38-win_amd64.lib  pymeshlab.cp-38-win_amd64.pyd
PyMeshLab/lib/: libGLEW.so.1.13  libQt5XcbQpa.so.5  libffi.so.6  libgmp.so.10  libmeshlab-common.1.0.0.dylib  libmeshlab-common.dylib  libmeshlab-common.so.1.0.0  libmirclient.so.9  libpcre.so.3
PyMeshLab/plugins/: decorate_background.exp  decorate_background.lib  decorate_base.exp  decorate_base.lib  decorate_raster_proj.exp  decorate_raster_proj.lib  decorate_shadow.exp  decorate_shadow.lib  edit_align.exp  edit_align.lib  edit_manipulators.exp  edit_manipulators.lib  edit_measure.exp  edit_measure.lib  edit_mutualcorrs.exp  edit_mutualcorrs.lib  edit_paint.exp  edit_paint.lib  edit_pickpoints.exp  edit_pickpoints.lib  edit_point.exp  edit_point.lib  edit_quality.exp  edit_quality.lib  edit_referencing.exp  edit_referencing.lib  edit_sample.exp  edit_sample.lib  edit_select.exp  edit_select.lib  filter_ao.exp  filter_ao.lib  filter_camera.exp  filter_camera.lib  filter_clean.exp  (+163 more)
docs/: about.rst  basics.rst  changelog.rst  classes.rst  conf.py  conf_download.py  examples.rst  filter_list.rst  filter_scripts.rst  index.rst  installation.rst  intro.rst  io_format_list.rst  pymeshlabserver.rst  tutorials.rst
install/: unsuitable_plugins.txt
pymeshlab/: __init__.py  keys.txt  polyscope_functions.py  replacer.py  setup.cfg
scripts/: README.md  simple_test.py  test_convex_hull.py  unsuitable_plugins.txt
src/: .qmake.conf  CMakeLists.txt  PyMeshLab.cpp  PyMeshLab.pro  README.md  main.cpp  meshlab.cmake  pyboundingbox.cpp  pyboundingbox.h  pymesh.cpp  pymeshdocument.cpp  pymeshlab.cpp
src/meshlab/: meshlab.pro
src/pymeshlab/: CMakeLists.txt  README.md  debug_main.cpp  doc_main.cpp  filterfunction.cpp  filterfunction.h  filterfunctionparameter.cpp  filterfunctionparameter.h  filterfunctionset.cpp  filterfunctionset.h  keygen_main.cpp  main.cpp  meshset.cpp  meshset.h  namebinder.cpp  namebinder.h  pymesh.cpp  pymesh.h  pymeshlab.pro  pymeshlabcommon.cpp  pymeshset.cpp  pymeshset.h
src/pymeshlab/bindings/: pyabsolute_value.cpp  pyabsolute_value.h  pyboundingbox.cpp  pyboundingbox.h  pycamera.cpp  pycamera.h  pycolor.cpp  pycolor.h  pyenum.cpp  pyenum.h  pyexceptions.cpp  pyexceptions.h  pyimage.cpp  pyimage.h  pymesh.cpp  pymesh.h  pymeshset.cpp  pymeshset.h  pymodule_functions.cpp  pymodule_functions.h  pypercentage.cpp  pypercentage.h  pypercentage_value.cpp  pypercentage_value.h  pypure_value.cpp  pypure_value.h
src/pymeshlab/docs/: pyabsolute_value_doc.h  pyboundingbox_doc.h  pycolor_doc.h  pyenum_doc.h  pyexceptions_doc.h  pyimage_doc.h  pymesh_doc.h  pymeshset_doc.h  pymodule_functions_doc.h  pypercentage_doc.h  pypercentage_value_doc.h  pypure_value_doc.h
src/pymeshlab/pymeshlab/: absolute_value.cpp  absolute_value.h  bounding_box.cpp  bounding_box.h  color.cpp  color.h  common.cpp  common.h  enum.cpp  enum.h  exceptions.h  image.cpp  image.h  mesh.cpp  mesh.h  meshlabsingletons.cpp  meshset.cpp  meshset.h  module_functions.cpp  module_functions.h  percentage.cpp  percentage.h  percentage_value.cpp  percentage_value.h  pure_value.cpp  pure_value.h
src/pymeshlab/pymeshlab/helpers/: common.cpp  common.h  meshlab_singletons.cpp  meshlab_singletons.h  meshset_helper.cpp  meshset_helper.h  verbosity_manager.cpp  verbosity_manager.h
src/pymeshlab/pymeshlab/plugin_management/: filterfunction.cpp  filterfunction.h  filterfunctionparameter.cpp  filterfunctionparameter.h  filterfunctionset.cpp  filterfunctionset.h  function.cpp  function.h  function_parameter.cpp  function_parameter.h  function_set.cpp  function_set.h
src/pymeshlabserver/: debug_main.cpp  extendedmeshdocument.cpp  extendedmeshdocument.h  main.cpp  pyboundingbox.cpp  pyboundingbox.h  pymesh.cpp  pymesh.h  pymeshdocument.cpp  pymeshdocument.h  pymeshlabcommon.cpp  pymeshlabcommon.h  pymeshlabserver.pro  pypoint.cpp  pypoint.h
src/utilities/dummy_bin_mac_deploy/: CMakeLists.txt  Info.plist  main.cpp
tests/: test_load_sample.py
(+274 files in other folders)
